@@ -5,7 +5,6 @@
 [-OTRS::RequireParensWithMethods]
 
 # TODO
-[-Subroutines::ProhibitExplicitReturnUndef]
 [-ValuesAndExpressions::ProhibitAccessOfPrivateData]
 
 
